[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/Dungeon/OldMan/FireActivate.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Dungeon/OldMan/FireSleep.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Dungeon/OldMan/OldManFire.gd" type="Script" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "active",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "inactive",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "activate",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8, 8 )

[node name="OldManFire" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="FireSource1" type="AnimatedSprite" parent="YSort"]
visible = false
frames = SubResource( 9 )
animation = "inactive"

[node name="Hitbox" parent="YSort/FireSource1" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource1/Hitbox" index="0"]
shape = SubResource( 10 )

[node name="FireSource2" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 24, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource2" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource2/Hitbox" index="0"]
shape = SubResource( 11 )

[node name="FireSource3" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 48, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource3" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource3/Hitbox" index="0"]
shape = SubResource( 12 )

[node name="FireSource4" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 72, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource4" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource4/Hitbox" index="0"]
shape = SubResource( 13 )

[node name="FireSource5" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 96, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource5" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource5/Hitbox" index="0"]
shape = SubResource( 14 )

[node name="FireSource6" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 120, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource6" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource6/Hitbox" index="0"]
shape = SubResource( 15 )

[node name="FireSource7" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 144, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource7" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource7/Hitbox" index="0"]
shape = SubResource( 16 )

[node name="FireSource8" type="AnimatedSprite" parent="YSort"]
visible = false
position = Vector2( 168, 0 )
frames = SubResource( 9 )
animation = "inactive"
playing = true

[node name="Hitbox" parent="YSort/FireSource8" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="YSort/FireSource8/Hitbox" index="0"]
shape = SubResource( 17 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="YSort/FireSource1/Hitbox"]

[editable path="YSort/FireSource2/Hitbox"]

[editable path="YSort/FireSource3/Hitbox"]

[editable path="YSort/FireSource4/Hitbox"]

[editable path="YSort/FireSource5/Hitbox"]

[editable path="YSort/FireSource6/Hitbox"]

[editable path="YSort/FireSource7/Hitbox"]

[editable path="YSort/FireSource8/Hitbox"]
